--- a/day10/dune
+++ b/day10/dune
@@ -1,6 +1,7 @@
 (library
  (name day10)
  (libraries core stdio)
+ (preprocessor_deps example.elfs)
  (preprocess
   (pps ppx_jane))
  (inline_tests))
