--- a/day15/dune
+++ b/day15/dune
@@ -5,7 +5,7 @@
 
 (library
  (name day15)
- (libraries core stdio angstrom)
+ (libraries core stdio angstrom z3)
  (preprocess
   (pps ppx_jane))
  (inline_tests))
