--- a/day16/dune
+++ b/day16/dune
@@ -5,7 +5,7 @@
 
 (library
  (name day16)
- (libraries core stdio angstrom)
+ (libraries core stdio angstrom z3)
  (preprocess
   (pps ppx_jane))
  (inline_tests))
